Changed header back to fixed positioning and removed "overflow: scroll" from the main div to resolve mobile browser issues.

--- a/Source/Style/body.styl
+++ b/Source/Style/body.styl
@@ -9,17 +9,7 @@ paddingSize = 40px;
     width: viewWidth;
     margin: 0;
     padding: 0;
-    z-index: 0;
-    overflow: auto;
-    
-
-// #container
-//     padding: 0;
-//     margin: 0;
-//     
-//     
-//     height: 100%;
-//     width: 100%;
+    z-index: 0;    
 
 .pages
     min-height: "calc(100% - %s)" % footerHeight;
