--- a/Source/Style/header.styl
+++ b/Source/Style/header.styl
@@ -1,7 +1,6 @@
 #header
-    //background-color: midColor;
-    background-color: #000000;
-    position: absolute;
+    background-color: midColor;
+    position: fixed;
     z-index: 1;
     float: left;
     width: 20%;
