--- a/Source/Style/index.styl
+++ b/Source/Style/index.styl
@@ -10,8 +10,6 @@ html, body
     padding: 0px;
     height: 100%;
     font-family: general;
-    overflow: hidden;
-    //-webkit-overflow-scrolling: touch;
 
 ::-moz-selection 
     background: highlightColor;
